Temporary fixes for layout issues with nav bar fixed

--- a/src/assets/steemgigs.scss
+++ b/src/assets/steemgigs.scss
@@ -27,6 +27,25 @@ body {
 .el-main {
   padding: 20px 20px;
 }
+
+// Temp Fixes for layout issues with fixed nav
+
+.VueCarousel-wrapper {
+  padding-top: 40px;
+}
+
+.categories__view .el-main, .search__view .el-main {
+  padding: 70px 20px;
+}
+
+.search__view .el-main {
+  padding: 70px 20px;
+}
+
+.profile__view .el-main {
+  padding: 70px 20px;
+}
+
 h1, h2, h4, h5 {
   margin-bottom: 15px;
 }
